--- a/amendstyle.css
+++ b/amendstyle.css
@@ -12,3 +12,10 @@
 .content-table-wrapper tbody td strong { font-weight: 700; }
 .content-table-wrapper tbody td img { padding: 0 3px; }
 </style>
+
+<style>
+/* ======================
+	CUSTOMISATIONS - {NAME}
+	REF: {LINK}
+==================  */
+</style>
