Change the label for easy navigation

--- a/amendstyle.css
+++ b/amendstyle.css
@@ -1,7 +1,8 @@
 <style>
 /* ======================
 	CUSTOMISATIONS - Content Table
-	REF: http://www.australianethical.com.au/wddd-managed-funds/;
+	USE BY PAGE ID: 8382;
+	BLOCK: 17;
 ==================  */
 .content-table-wrapper { max-width: 100%; }
 .content-table-wrapper { margin-top: -30px; width: 100% !important; margin-bottom: 40px; }
@@ -16,6 +17,7 @@
 <style>
 /* ======================
 	CUSTOMISATIONS - {NAME}
-	REF: {LINK}
+	USE BY PAGE ID: 8382;
+	BLOCK: 17;
 ==================  */
 </style>
