--- a/amendstyle.css
+++ b/amendstyle.css
@@ -17,7 +17,7 @@
 <style>
 /* ======================
 	CUSTOMISATIONS - {NAME}
-	USE BY PAGE ID: 8382;
-	BLOCK: 17;
+	USE BY PAGE ID: {PAGE ID using this css style. Use comma to seperate multiple Page ID};
+	BLOCK: {Block number where the css code is been place. Use comma to seperate multiple number};
 ==================  */
 </style>
