--- a/amendstyle.css
+++ b/amendstyle.css
@@ -36,3 +36,70 @@
 }
 </style>
 
+<style>
+/* ======================
+	CUSTOMISATIONS - Grid Block
+	USE BY PAGE ID: 8442
+	BLOCK: 1;
+==================  */
+.grid-item-block{
+	width: 100%;
+    height: 251px;
+    float: left;
+    background: #fff;
+    margin-bottom: 10px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+}
+.grid-item-block:before {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0, 0.5);
+    -moz-transition: background .3s linear;
+    -webkit-transition: background .3s linear;
+    -o-transition: background .3s linear;
+    transition: background .3s linear;
+    z-index: 1;
+}
+.grid-item-block .grid-item-overlay {
+    position: absolute;
+    min-height: 60px;
+    background: rgba(255,255,255,0.9);
+    padding: 10px;
+    bottom: -160px;
+    font-size: 12px;
+    -webkit-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+    z-index: 3;
+}
+.grid-item-block:hover .grid-item-overlay{
+	bottom: 0;
+}
+.grid-item-block .grid-item-option{
+	background-size:cover;
+	background-position: center;
+	text-align: left;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    position: relative;
+}
+.grid-item-block .grid-item-option h3 {
+    font-weight: 400;
+    color: #fff;
+    width: 70%;
+    letter-spacing: 0.02em;
+    font-size: 1.1em;
+    line-height: 120%;
+    position: absolute;
+    bottom: 10px;
+    text-shadow: 2px 2px 2px #333;
+    z-index: 2;
+}
+</style>
