--- a/amendstyle.css
+++ b/amendstyle.css
@@ -48,3 +48,7 @@
 ==================  */
 a.anchor { display: block; position: relative; top: -50px; visibility: hidden; }
 </style>
+
+<style>
+.intro-content.header-text-light {padding-top: 150px;}section.intro.no-video{min-height:320px;}
+</style>
